--- a/index.css
+++ b/index.css
@@ -43,6 +43,13 @@ a:hover{
     margin: 0 auto;
     margin-top: 20px;
     height: 300px;
+    
+}
+
+.data{
+    font-size: 30px;
+    text-align: center;
+    color:white;
 }
 
 .table-style{
@@ -54,6 +61,8 @@ a:hover{
     margin: auto;
     margin-top: 30px;
     font-size: 20px;
+    background-image: url(./assets/corona.jpeg);
+    background-size: cover;
 }
 .tab-body:hover{
     background-color:lightgray;
@@ -85,6 +94,52 @@ a:hover{
 }
 
 .contact{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+/*Precaution*/
+.prec-icons{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 80px;
+}
+#icon{
+    background-color: rgb(190, 183, 183);
+    border-radius: 10px;
+    color: black;
+    width: 170px;
+    font-size: 10px;
+    text-align: center;
+    padding: 3px;
+}
+#icon:hover{
+    width: 180px;
+    background-color: blanchedalmond;
+}
+/*precautions*/
+.symp-text{
+    font-size: 16px;
+    top: 0;
+    left: 0;
+    width: 30%;
+    height: 100%;
+    margin-top: 15px;
+    background-image: linear-gradient(
+        to right,
+        #5a5756 0%,
+        #302c2e 51%,
+        #a09a99 100%
+    );
+    background-size: cover;
+      transform: skewY(-3deg);
+    z-index: -2;
+    padding: 10px;
+}
+.symp-image{
+    padding: 40px;
+}
+.img-text{
     display: flex;
     justify-content: space-evenly;
 }
