--- a/index.css
+++ b/index.css
@@ -49,7 +49,8 @@ a:hover{
 .data{
     font-size: 30px;
     text-align: center;
-    color:white;
+    color:darkgray;
+    font-family:monospace;
 }
 
 .table-style{
